<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.sk392.kr.carmony.Activity.IntroLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_centerVertical="true">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80.5dp"
        android:background="@drawable/logo" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="176dp"
        android:background="@drawable/edittext_border">


            <EditText
                android:id="@+id/edit_email"
                android:layout_marginLeft="10dp"
                style="@style/Blackappleregular13"
                android:layout_width="235dp"
                android:background="@android:color/transparent"
                android:layout_height="45dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/rl_edit_passwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="236dp"
        android:background="@drawable/edittext_border">


            <EditText
                android:id="@+id/edit_passwd"
                android:layout_marginLeft="10dp"
                style="@style/Blackappleregular13"
                android:background="@android:color/transparent"
                android:layout_width="235dp"
                android:layout_height="45dp"
                android:hint="@string/hint_passwd"
                android:inputType="textPassword" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rl_edit_passwd"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="291dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1.5dp"
            android:text="@string/auto_login" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="250dp"
        android:layout_height="45dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="411.5dp"
        android:gravity="center_horizontal|center_vertical"
        style="@style/Whiteapplemedium15"
        android:background="@drawable/large_button_type"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="504dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/kakaotalk_icon" />

        <TextView
            android:id="@+id/tv_kakao_login"
            style="@style/Greyishappleregular13"
            android:layout_width="87.5dp"
            android:layout_height="15.5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/white"
            android:gravity="left"
            android:text="@string/kakao_login"
            android:textColor="@color/greyish_brown" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="18dp"
            android:background="@drawable/facebook_icon" />

        <TextView
            android:id="@+id/tv_fb_login"
            style="@style/Greyishappleregular13"
            android:layout_width="87.5dp"
            android:layout_height="15.5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/white"
            android:gravity="left"
            android:text="@string/fb_login"
            android:textColor="@color/greyish_brown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="341dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            style="@style/Warmgreyappleregular12"
            android:text="@string/signup"
            android:textColor="@drawable/login_text_type" />

        <View
            android:layout_width="1dp"
            android:layout_height="11dp"
            android:layout_marginLeft="11dp"
            android:background="@color/white_six" />

        <TextView
            android:id="@+id/tv_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Warmgreyappleregular12"
            android:layout_marginLeft="11dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/find_id"
            android:textColor="@drawable/login_text_type" />

        <View
            android:layout_width="1dp"
            android:layout_height="11dp"
            android:layout_marginLeft="11dp"
            android:background="@color/white_six" />

        <TextView
            android:id="@+id/tv_find_passwd"
            android:layout_width="wrap_content"
            style="@style/Warmgreyappleregular12"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:clickable="false"
            android:text="@string/find_passwd"
            android:textColor="@drawable/login_text_type" />

    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
